--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>Comming Soon | kinqq </title>
 </head>
 <body>
-    <h1>Comming Soon</h1>
+    <h1 style="text-align:center">Comming Soon</h1>
 </body>
 </html>
