--- a/index.html
+++ b/index.html
@@ -1,11 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Comming Soon | kinqq </title>
-</head>
-<body>
-    <h1 style="text-align:center">Comming Soon</h1>
-</body>
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>Document</title>
+        <script
+            src="https://code.jquery.com/jquery-3.5.1.js"
+            integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc="
+            crossorigin="anonymous"
+        ></script>
+        <script src="script.js"></script>
+        <script>
+            function openInNewTab(url) {
+                var win = window.open(url, "_blank");
+                win.focus();
+            }
+        </script>
+        <link rel="preconnect" href="https://fonts.gstatic.com" />
+        <link
+            href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100&display=swap"
+            rel="stylesheet"
+        />
+        <link rel="stylesheet" href="style.css" />
+    </head>
+    <body>
+        <div class="wrapper">
+            <div class="roles">
+                <div>안녕하세요.</div>
+                <div>저는 온라인에서 개발자로 활동하고 있는</div>
+                <div>대한민국에 사는 한 중학생,</div>
+                <div>kinkyu입니다 :)</div>
+            </div>
+        </div>
+        <div class="btnWrap">
+            <div class="button-2">
+                <div
+                    class="eff-2"
+                    onclick="openInNewTab('//kinqq.live/nwitter/#')"
+                ></div>
+                <a onclick="openInNewTab('//kinqq.live/nwitter/#')">Nwitter</a>
+            </div>
+        </div>
+    </body>
 </html>
