Fixed Button were not excute when pressing it quickly

--- a/index.html
+++ b/index.html
@@ -33,12 +33,12 @@
             </div>
         </div>
         <div class="btnWrap">
-            <div class="button-2">
-                <div
-                    class="eff-2"
-                    onclick="openInNewTab('//kinqq.live/nwitter/#')"
-                ></div>
-                <a onclick="openInNewTab('//kinqq.live/nwitter/#')">Nwitter</a>
+            <div
+                class="button-2"
+                onclick="openInNewTab('//kinqq.live/nwitter/#')"
+            >
+                <div class="eff-2"></div>
+                <p>Nwitter</p>
             </div>
         </div>
     </body>
