Updated to Responsible Web

--- a/index.html
+++ b/index.html
@@ -31,15 +31,13 @@
                 <div>대한민국에 사는 한 중학생,</div>
                 <div>kinkyu입니다 :)</div>
             </div>
-        </div>
-        <div class="btnWrap">
-            <div
-                class="button-2"
-                onclick="openInNewTab('//kinqq.live/nwitter/#')"
-            >
-                <div class="eff-2"></div>
-                <p>Nwitter</p>
-            </div>
+            <form style="margin-top: 10%">
+                <button
+                    onclick="window.openInNewTab('https://kinqq.live/nwitter')"
+                >
+                    Nwitter
+                </button>
+            </form>
         </div>
     </body>
 </html>
