Hide Some Information

--- a/index.html
+++ b/index.html
@@ -25,17 +25,17 @@
     </head>
     <body>
         <div class="wrapper">
-            <div class="roles">
+            <!-- <div class="roles">
                 <div>안녕하세요.</div>
                 <div>저는 온라인에서 개발자로 활동하고 있는</div>
                 <div>대한민국에 사는 한 중학생,</div>
                 <div>kinkyu입니다 :)</div>
-            </div>
+            </div> -->
             <form style="margin-top: 10%">
                 <button
-                    onclick="window.openInNewTab('https://kinqq.live/nwitter')"
+                    onclick="window.openInNewTab('https://kinqq.live/forum')"
                 >
-                    Nwitter
+                    2-10 포럼
                 </button>
             </form>
         </div>
