--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100&display=swap" rel="stylesheet" />
   <link rel="stylesheet" href="style.css" />
   <link rel="stylesheet" href="terminal-window.css" />
+  <link rel="icon" type="image/x-icon" href="/favicon.ico">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
   <script src="https://www.mattboldt.com/demos/typed-js/js/typed.custom.js"></script>
 </head>
