--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <body>
   <div class="wrapper">
     <p>
-    <div id="hi">Hi there! 👋 </div>
+    <div id="hi">Hi there! </div>
 
     <div class="terminal-window">
       <header>
@@ -39,23 +39,49 @@
       </section>
     </div>
     <!-- data -->
+    <div class="terminal-data intro-run-output-mobile">
+      <br>
+      &nbsp;Introduction
+      <br>
+      --------------<br>
+      <span class="grey">Name&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;:</span> Kinkyu <br />
+      <span class="grey">Age&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;:</span> 15 <br />
+      <span class="grey">Nationality :</span> South Korea<br />
+      <span class="grey">Residence&nbsp;&nbsp;&nbsp;:</span> United States <br /><br />
+
+      Ability: Programming<br>
+      &nbsp;&nbsp;<span class="green">✓</span> <span class="grey"><span class="logo next">Next.js</span></span><br>
+      &nbsp;&nbsp;<span class="green">✓</span> <span class="grey"><span class="logo python">Python</span></span><br>
+      &nbsp;&nbsp;<span class="green">✓</span> <span class="grey"><span class="logo express">Express.js</span> and <span class="logo graphql">GraphQL</span></span><br>
+      &nbsp;&nbsp;<span class="red">✗</span> <span class="grey">Mobile app </span><br>
+      &nbsp;&nbsp;<span class="red">✗</span> <span class="grey">Computer Assemble</span><br>
+      <br>
+      <span class="gray">&nbsp;------ --------</span><br>
+      &nbsp;&nbsp;Well&nbsp;&nbsp;&nbsp;Trying<br>
+      <span class="gray">&nbsp;------ --------</span><br>
+      &nbsp;&nbsp;&nbsp;<span class="green">✓ 3</span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span class="red">✗ 2</span> <br>
+      <br>
+      &nbsp;&nbsp;Completed 1 feature in 0.01s<br>&nbsp;
+    </div>
+
     <div class="terminal-data intro-run-output">
       <br>
-      Introduction to Kinkyu
+      &nbsp;Introduction to Kinkyu
       <br>
-      ----------------------------------------------<br>
+      ------------------------<br>
       <span class="grey">Name&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;:</span> Kinkyu <br />
       <span class="grey">Age&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;:</span> 15 <br />
       <span class="grey">Nationality :</span> Republic of Korea<br />
       <span class="grey">Residence&nbsp;&nbsp;&nbsp;:</span> United States <br /><br />
 
-      &nbsp;&nbsp;Ability: Programming<br>
-      &nbsp;&nbsp;&nbsp;&nbsp;<span class="green">✓</span> <span class="grey">Create a Website&nbsp;&nbsp;| <span class="logo next">Next.js</span></span><br>
-      &nbsp;&nbsp;&nbsp;&nbsp;<span class="green">✓</span> <span class="grey">Make an algorithm | <span class="logo python">Python</span></span><br>
-      &nbsp;&nbsp;&nbsp;&nbsp;<span class="green">✓</span> <span class="grey">Set up API Server | <span class="logo express">Express.js</span> and <span class="logo graphql">GraphQL</span></span><br>
-      &nbsp;&nbsp;&nbsp;&nbsp;<span class="red">✗</span> <span class="grey">Create an mobile app </span><br>
-      &nbsp;&nbsp;&nbsp;&nbsp;<span class="red">✗</span> <span class="grey">Building a computer </span><br>
+      Ability: Programming<br>
+      &nbsp;&nbsp;<span class="green">✓</span> <span class="grey">Create a Website&nbsp;&nbsp;| <span class="logo next">Next.js</span></span><br>
+      &nbsp;&nbsp;<span class="green">✓</span> <span class="grey">Make an algorithm | <span class="logo python">Python</span></span><br>
+      &nbsp;&nbsp;<span class="green">✓</span> <span class="grey">Set up API Server | <span class="logo express">Express.js</span> and <span class="logo graphql">GraphQL</span></span><br>
+      &nbsp;&nbsp;<span class="red">✗</span> <span class="grey">Create an mobile app </span><br>
+      &nbsp;&nbsp;<span class="red">✗</span> <span class="grey">Build a computer </span><br>
       <br>
+      
       <span class="gray">&nbsp;------------- -------------</span><br>
       &nbsp;&nbsp;Pretty well&nbsp;&nbsp;&nbsp;Keep Trying<br>
       <span class="gray">&nbsp;------------- -------------</span><br>
