--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="oauth-network-verification" content="0xf3c817367049793baa914dd3aba891395808193b" />
+  <meta name="privacy" content="/개인정보약관 경로/" />
+  <meta name="terms" content="/이용약관 경로/" />	
   <title>Kinqq | Homepage</title>
   <script src="https://code.jquery.com/jquery-3.5.1.js" integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc="
     crossorigin="anonymous"></script>
